_Source/force-app/main/default/objects/BI_Territory_Plan__c/BI_Territory_Plan__c.object-meta.xml
<CustomObject>
    <label>Territory Plan</label>
    <nameField>
        <label>Territory Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>