_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_12_Month_JV_Sales_Corporate__c.field-meta.xml
<CustomField>
    <fullName>BI_12_Month_JV_Sales_Corporate__c</fullName>
    <description>Field deprecated in BI Release 2019 - 11</description>
    <inlineHelpText>Deprecated field - no longer in use. 12ME JV sales for all corporate accounts in territory from PI, otherwise appropriate source for your region including YQ</inlineHelpText>
    <label>x12 Month JV Sales (Corporate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>