_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Key_Competition_By_Market__c.field-meta.xml
<CustomField>
    <fullName>BI_Key_Competition_By_Market__c</fullName>
    <label>Key Competition (By Market)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>