_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Overarching_Focus_Strategy_Desc__c.field-meta.xml
<CustomField>
    <fullName>BI_Overarching_Focus_Strategy_Desc__c</fullName>
    <label>Territory Strategy &amp; Action Plan</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>