_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Progress_Overview__c.field-meta.xml
<CustomField>
    <fullName>BI_Progress_Overview__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00O1T000006QuqhUAC/view?fv0=&quot; &amp; OwnerId  &amp; &quot;&amp;fv1=&quot; &amp; TEXT(BI_Territory_Plan_Year__c),&quot;View Progress Report&quot;)</formula>
    <label>Progress Overview</label>
    <type>Text</type>
</CustomField>