_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Region__c.field-meta.xml
<CustomField>
    <fullName>BI_Region__c</fullName>
    <formula>Owner:User.Sales_Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>