_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Regional_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Regional_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Plan</label>
    <referenceTo>BI_Regional_Plan__c</referenceTo>
    <relationshipLabel>Territory Plans</relationshipLabel>
    <relationshipName>Territory_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>