_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Regional_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Regional_Plan_ID__c</fullName>
    <formula>BI_Regional_Plan__r.Id</formula>
    <label>Regional Plan ID</label>
    <type>Text</type>
</CustomField>