_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Related_Territory_Plan__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_Territory_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Territory Plan</label>
    <referenceTo>BI_Territory_Plan__c</referenceTo>
    <relationshipLabel>Related Territory Plans</relationshipLabel>
    <relationshipName>Territory_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>