_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Territory_Geography__c.field-meta.xml
<CustomField>
    <fullName>BI_Territory_Geography__c</fullName>
    <label>Territory Geography</label>
    <length>255</length>
    <type>Text</type>
</CustomField>