_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>BI_Ultimate_Parent__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + 
IF(NOT(ISBLANK(BI_Regional_Plan__r.BI_Divisional_Plan__r.Name)), BI_Regional_Plan__r.BI_Divisional_Plan__r.Id, 
IF(NOT(ISBLANK(BI_Regional_Plan__r.Name)), BI_Regional_Plan__r.Id,
Id)), 

IF(NOT(ISBLANK(BI_Regional_Plan__r.BI_Divisional_Plan__r.Name)), BI_Regional_Plan__r.BI_Divisional_Plan__r.Name, 
IF(NOT(ISBLANK(BI_Regional_Plan__r.Name)),BI_Regional_Plan__r.Name, 
Name)),&quot; &quot;)</formula>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>