_Source/force-app/main/default/objects/BI_Territory_Plan__c/fields/BI_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>BI_Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>