_Source/force-app/main/default/objects/BI_Territory_Plan__c/listViews/All_My_Territory_Plans.listView-meta.xml
<ListView>
    <fullName>All_My_Territory_Plans</fullName>
    <columns>BI_Territory_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Progress_Overview__c</columns>
    <columns>BI_Overarching_Focus_Strategy_Desc__c</columns>
    <columns>BI_Regional_Plan__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>My Territory Plans - All</label>
</ListView>