_Source/force-app/main/default/objects/BI_Territory_Plan__c/listViews/All_Territory_Plans_My_Region.listView-meta.xml
<ListView>
    <fullName>All_Territory_Plans_My_Region</fullName>
    <columns>BI_Territory_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BI_Progress_Overview__c</columns>
    <columns>BI_Overarching_Focus_Strategy_Desc__c</columns>
    <columns>BI_Regional_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Part_of_my_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Territory Plans - My Region</label>
</ListView>